@@ -1,3 +1,6 @@
+2007-11-30 Andreas Obergrusberger <tradiaz@yahoo.de>
+	* added a function to select all listed items on the search screen
+
 2007-06-17 Andreas Obergrusberger <tradiaz@yahoo.de>
 	* two critical bugs in leoslyrics source have been fixed
 2007-02-16 Andreas Obergrusberger <tradiaz@yahoo.de>
